kubernetes/services/course_topics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: courses-topics
spec:
  selector:
    app: courses-topics
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
