kubernetes/services/discussion_forum-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discussion-forum
spec:
  selector:
    app: discussion-forum
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
