kubernetes/services/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-and-auth-service
spec:
  selector:
    app: frontend-and-auth
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
